test/valid/66128_wildcard_multiple/wildcard_multiple.mag
-- Author: 66128, Daniel Sousa

fun fn (_, _) : (Unit, Bool) -> Unit = 
    print("Called fn")

fun main (_) : Unit -> Unit = 
    fn(unit, true)
    